--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.4.1",
+    "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
+    "date-and-time": "^3.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.2",
     "prisma": "^5.4.1"
   }
 }
